@@ -177,7 +177,7 @@ void TransferJob::begin(id <IFURLHandleClient> client, void *userData)
     
     d->client = client;
     attributes = [NSDictionary dictionaryWithObject:[NSValue valueWithPointer:userData] forKey:IFURLHandleUserData];
-    d->handle = [[IFURLHandle alloc] initWithURL:d->url attributes:attributes flags:0];
+    d->handle = [[IFURLHandle alloc] initWithURL:d->url attributes:attributes flags:0];    
     [d->handle addClient:client];
     [d->handle loadInBackground];
 }
